--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# Load schema and data at startup
+spring.datasource.initialization-mode=always
 
-movie.catalogue.api.url=http://34.148.175.45:8080/api-gateway/movie-service/movie/
-movie.api.key=PLACEHOLDER_API_KEY
+product.catalogue.api.url=http://34.148.175.45:8080/api-gateway/movie-service/movie/{movieId}
